#pragma once

enum CellType {
    EMPTY,
    WALL,
    FLOOR,
    HALL,
    OPEN_DOOR,
    CLOSED_DOOR
};

