#pragma once

enum EventType {
	GENERIC = 0,
	GENERIC_DONE = 1,

	INTERACTED = 0b1'0,
	INTERACTED_DONE = 0b1'1,
	ATTACKED = 0b10'0,
	ATTACKED_DONE = 0b10'1,
	MOVED = 0b11'0,
	MOVED_DONE = 0b11'1,
	OCCUPIED = 0b100'0,
	OCCUPIED_DONE = 0b100'1,

	MOVE = 0b1'0000'0,
	MOVE_DONE = 0b1'0000'1,
	ATTCK = 0b10'0000'0,
	ATTCK_DONE = 0b10'0000'1,
	CAST = 0b11'0000'0,
	CAST_DONE = 0b11'0000'1,

	CONSUMED = 0b1'0000'0000'0,
	CONSUMED_DONE = 0b1'0000'0000'1,
};