#pragma once

enum Size {MINISCULE, SMALL, MEDIUM, LARGE};