@startuml
skinparam group_inheritance 3

class EventTarget {
}

package "Action" as ActionNS {

    enum Action::Shape {
        POINT
        LINE
        CONE
        CIRCLE
        SQUARE
    }

    enum Action::Targets {
        SELF
        FRIENDLY
        HOSTILE
        ALL
    }

}

package "Entity" as EntityNS {

    class Entity::Target {
        + Target( std::shared_ptr<Entity> &entity )
        + std::shared_ptr<Entity> as_entity()
        - std::shared_ptr<Entity> entity
    }

    class Entity::TempFeatureSet {
        + std::shared_ptr<FeatureSet> set
        + std::shared_ptr<Entity> source
        + EffectType effect_type
        + int mod_numerator
        + int mod_denominator
    }

}

package "Character" as CharacterNS {
	class Character::Target {
		+ Target( std::shared_ptr<Character> &character )
		+ std::shared_ptr<Entity> as_entity()
		+ std::shared_ptr<Character> as_character()
		- std::shared_ptr<Character> character
	}
}

package "Item" as ItemNS {
    class Item::Target {
        + Target(std::shared_ptr<Item> item)
        + std::shared_ptr<Entity> as_entity()
        + std::shared_ptr<Item> as_item()

        - std::shared_ptr<Item> item
    }
}

package "Consumable" as ConsumableNS {
    class Consumable::Target {
        + Target(std::shared_ptr<Item> item)
        + std::shared_ptr<Entity> as_entity()
        + std::shared_ptr<Item> as_item()
        + std::shared_ptr<Consumable> as_consumable()

        - std::shared_ptr<Consumable> Consumable
    }
}

package "Equippable" as EquippableNS {
    class Equippable::Target {
        + Target(std::shared_ptr<Item> item)
        + std::shared_ptr<Entity> as_entity()
        + std::shared_ptr<Item> as_item()
        + std::shared_ptr<Equippable> as_equippable()

        - std::shared_ptr<Equippable> equippable
    }
}

enum Type {
    PASS
    MOVE
    CONSUME
    EQUIP
    INTERACT
    ATTACK
    AID
    EFFECT
}

abstract class Action {
    + const EventType pre_event
    + const EventType post_event

    + const Targets targets
    + const int range
    + const Shape shape
    + const bool aoe
    + const int aoe_size

    + Action(EventType pre_event, EventType post_event, Targets targets, int range, Shape shape, bool aoe, int aoe_size)

    + {abstract} void on_hit(std::shared_ptr<Character> from, std::shared_ptr<Entity> to, Position cast_point)
}


class ConsoleDungeonRenderer {
    # void entity_moved(const std::shared_ptr<Entity> entity, Position old_pos)

    # void entity_created(const std::shared_ptr<Entity> entity)

    # void entity_destroyed(const std::shared_ptr<Entity> entity)

    # void cell_changed(Position position)
}

abstract class DungeonRenderer {
    + void change_cell(Position position)

    + void notify(EventInfo &info)
    + const std::vector<EventType> listening_for() const

    # {static} std::vector<EventType> event_types;

    # DungeonRenderer(const std::vector<CellType> &cells);

    # {abstract} void entity_moved(const std::shared_ptr<Entity> entity, Position old_pos)
    # {abstract} void entity_added(const std::shared_ptr<Entity> entity)
    # {abstract} void entity_removed(const std::shared_ptr<Entity> entity)
    # {abstract} void cell_changed(Position position)

    const std::vector<CellType> &cells
}


class Entity {
    + void do_turn()

    + void remove_from_containers()
    + ~Entity()

    + void add_listener(Listener &listener)
    + void remove_listener(Listener &listener)
    + std::unique_ptr<EventTarget> get_as_target()

    + void add_modifier(StatModifier &modifier, int mod_numerator = 1, int mod_denominator = 1)
    + void remove_modifier(StatModifier &modifier, int mod_numerator = 1, int mod_denominator = 1)

    + void add_action(Action &action)
    + void remove_action(Action &action)

    + void add_feature_set(FeatureSet &feature_set, int mod_numerator = 1, int mod_denominator = 1)
    + void remove_feature_set(FeatureSet &feature_set, int mod_numerator = 1, int mod_denominator = 1)

    + void add_temporary_feature_set(std::shared_ptr<Entity> source, std::shared_ptr<FeatureSet> feature_set, EffectType effect_type, int num_turns)

    + bool is_a(int type)

    + void damage(std::shared_ptr<Entity> source, int amount)
    + int damage(int damage)
    + void heal(std::shared_ptr<Entity> source, int amount)
    + void heal(int amount)
    + void move(std::shared_ptr<Entity> source, int distance, Direction direction)
    + void move(int distance, Direction direction)
    + void move(std::shared_ptr<Entity> source, Position destination)
    + void move(Position destination)
    + void kill(std::shared_ptr<Entity> source)
    + void destroy()
    + void interact(Character *source)

    + int get_health()
    + void set_health(int amount)

    + void add_list_reference(std::list<std::shared_ptr<Entity>> &list, std::list<std::shared_ptr<Entity>>::iterator reference)
    + void remove_list_reference(std::list<std::shared_ptr<Entity>> &list)

    + Position get_position()
    + int get_size()
    + int get_max_health()
    + int get_initiative()
    + int get_defence_strength()
    + int get_knockback_resist()
    + int get_dodge()

    + std::shared_ptr<Entity> clone()

    # virtual Stat & get_corresponding_stat(StatModifier &modifier)

    # Position position
    # int health

    # Stat size
    # Stat max_health
    # Stat initiative
    # Stat defense_strength
    # Stat knockback_resist
    # Stat dodge

    # void check_dead()

    + void trigger(EventType event_type)
    + void trigger(EventType event_type, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, std::vector<std::shared_ptr<Entity>> secondaries)
    + void trigger(EventType event_type, Position position)
    + void trigger(EventType event_type, Position position, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, Position position, std::vector<std::shared_ptr<Entity>> secondaries)
    + void trigger(EventType event_type, int integer)
    + void trigger(EventType event_type, int integer, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, int integer, std::vector<std::shared_ptr<Entity>> secondaries)
    + void trigger(EventType event_type, float num)
    + void trigger(EventType event_type, float num, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, float num, std::vector<std::shared_ptr<Entity>> secondaries)
    + void trigger(EventType event_type, double num)
    + void trigger(EventType event_type, double num, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, double num, std::vector<std::shared_ptr<Entity>> secondaries)
    + void trigger(EventType event_type, EventInfo::Data &reference)
    + void trigger(EventType event_type, EventInfo::Data &reference, std::shared_ptr<Entity> secondary)
    + void trigger(EventType event_type, EventInfo::Data &reference, std::vector<std::shared_ptr<Entity>> secondaries)

    - int turn_count

    - void check_temp_features()


    - std::map<std::list<std::shared_ptr<Entity>>*, std::list<std::shared_ptr<Entity>>::iterator> list_references

    - std::map<EventType, std::set<std::shared_ptr<Listener>>> listeners

    - std::map<int, TempFeatureSet> temp_feature_sets

    - std::set<int> types

    - std::shared_ptr<Controller> controller
}

class Character {
    + void do_turn()

    + std::unique_ptr<EventTarget> get_as_target()

    + void add_action(Action &action)
    + void remove_action(Action &action)

    + void give(std::shared_ptr<Item> item)

    + int get_attack_strength()
    + int get_spell_strength()
    + int get_speed()
    + int get_tenacity()
    + int get_accuracy()

    + std::shared_ptr<Entity> clone()

    # Stat & get_corresponding_stat(StatModifier &modifier)

    # Stat attack_strength
    # Stat spell_strength
    # Stat speed
    # Stat tenacity
    # Stat accuracy

    # std::list<std::shared_ptr<Item>> inventory
    # std::map<int, std::shared_ptr<Item>> slots
}

class Item {
    + Item()
    + std::unique_ptr<EventTarget> get_as_target()
}

class Consumable {
    + Consumable()
    + std::unique_ptr<EventTarget> get_as_target()
}

class Equippable {
    + Equippable()
    + std::unique_ptr<EventTarget> get_as_target()
}

class Stat {
    + Stat()
    + Stat(int base)
    + int value
    + std::multiset<std::pair<int, int>> bases
    + int base
    + int shift
    + int multiplier
    + int divider
    + void update()
}

class Stage {
    + Stage(State &state, int id)
    + void start(Game &game) = 0
    + virtual ~Stage() = default

    # State &state
    # const int id
}

class Menu

class Dungeon {
    + Dungeon(State &state, int id, int width, int height)

    + void add_entity(Entity &entity)

    + std::list<std::shared_ptr<Entity>> get_entities_at(Position position)
    + CellType get_cell_type(Position position)
    + void start(Game &game) override

    - const int width
    - const int height
    - std::list<std::shared_ptr<Entity>> entities
    - std::vector<CellType> cells
    - std::vector<std::list<std::shared_ptr<Entity>>> cell_entities

    - std::list<std::shared_ptr<Entity>> & get_cell_list_at(Position position)
}

enum Direction {
    N
    NE
    E
    SE
    S
    SW
    W
    NW
}

enum EffectType {
    POSITIVE
    NEGATIVE
    NEUTRAL
}

enum EventType {
	GENERIC = '0
	GENERIC_DONE = '1

	INTERACTED = 0b1'0
	INTERACTED_DONE = 0b1'1
	ATTACKED = 0b10'0
	ATTACKED_DONE = 0b10'1
	MOVED = 0b11'0
	MOVED_DONE = 0b11'1
	OCCUPIED = 0b100'0
	OCCUPIED_DONE = 0b100'1
	CREATED = 0b101'0
    CREATED_DONE = 0b101'1
    DESTROYED = 0b110'0
    DESTROYED_DONE = 0b110'1
	HEALED = 0b111'0
	HEALED_DONE = 0b111'1
    TEMP_SET_ADD = 0b1000'0

	MOVE = 0b1'0000'0
	MOVE_DONE = 0b1'0000'1
	ATTACK = 0b10'0000'0
	ATTACK_DONE = 0b10'0000'1
	CAST = 0b11'0000'0
	CAST_DONE = 0b11'0000'1
	CONSUME = 0b100'0000'0
	CONSUME_DONE = 0b100'0000'1
	EQUIP = 0b101'0000'0
	EQUIP_DONE = 0b101'0000'1
	MISS = 0b110'0000'0
	MISS_DONE = 0b110'0000'1
    ADDED_TO_FLOOR = 0b111'0000'0
    ADDED_TO_FLOOR_DONE = 0b111'0000'1

	CONSUMED = 0b1'0000'0000'0
	CONSUMED_DONE = 0b1'0000'0000'1
    EQUIPPED = 0b10'0000'0000'0
    EQUIPPED_DONE = 0b10'0000'0000'1
}

class Position {
    + int y
    + int x
    + Position()
    + Position(int y, int x)
    + Position(const Position &other)
    + Position(Position &&other)
    + Position &operator=(const Position &other)
    + Position &operator=(Position &&other)
    + Position operator+(const Position &other)
}

enum Size {
    MINISCULE
    SMALL
    MEDIUM
    LARGE
}

enum StatType {
    NONE

    SIZE
    MAX_HEALTH
    INITIATIVE
    DEFENSE_STRENGTH
    KNOCKBACK_RESIST
    DODGE

    ATTACK_STRENGTH
    SPELL_STRENGTH
    SPEED
    TENACITY
    ACCURACY
}

enum CellType {
    EMPTY
    WALL
    FLOOR
    HALL
}

package "EventInfo" as EventInfoNS {
    class EventInfo::Data{
        + Position position
        + int integer1
        + int integer2
        + double double_float
        + float float1
        + float float2
    }
}

class EventInfo {
    + Position event_position
    + int event_integer
    + int event_integer2
    + double event_double
    + float event_float
    + Data *event_data_pointer
    + EventType event_type
    + std::unique_ptr<EventTarget> primary
    + std::unique_ptr<EventTarget> secondary
    + std::vector<std::unique_ptr<EventTarget>> secondaries
}

class EventTarget {
    + virtual ~EventTarget()
    + std::shared_ptr<Entity> as_entity()
    + std::shared_ptr<Character> as_character()
    + std::shared_ptr<Item> as_item()
    + std::shared_ptr<Consumable> as_consumable()
    + std::shared_ptr<Equipable> as_equippable()
}

class FeatureSet {
    + std::vector<std::shared_ptr<Listener>> listeners
    + std::vector<StatModifier> stat_modifiers
    + std::vector<std::shared_ptr<Action>> actions
}

class Game {
    + void set_initial_stage(int stage)

    + void add_stage(int group, Stage *stage)
    + void remove_state(int id)
    + void remove_states(int group)

    + void add_entity_class(int id, Entity *entity)
    + State & get_state()
    + void run()

    - std::map<int, std::shared_ptr<Stage>> stages
    - std::shared_ptr<Stage> current_stage
    - State state
}

class Listener {
    + virtual ~Listener()
    + void notify(EventInfo &info)
    + const std::vector<EventType> listening_for() const
}

class Race {
    + std::string name
    + std::string description
    + std::string shortcut
    + std::shared_ptr<FeatureSet> feature_set
    + int id
}

class State {
    + Character player {}
    + Loader loader {}
}

package "StatModifier" as StatModifierNS {
     enum StatModifier::Step {
        BASE
        ADD
        SUBTRACT
        MULTIPLY
        DIVIDE
        MULTDIV
     }
}

class StatModifier {
    + StatType stat
    + Step type
    + std::int_least16_t base
    + std::int_least16_t priority
    + std::int_least16_t numerator
    + std::int_least16_t denominator
    + std::int_least32_t amount
    + StatModifier()
    + StatModifier(StatType stat, Step type, int_least32_t amount)
    + StatModifier(StatType stat, Step type, int_least16_t one, int_least16_t two)
}

class Loader {
    + Loader()
    + Loader(std::string game_file)
    + void load_file(std::string file)
    + int get_id(std::string name) const
    + const std::map<int, Race> get_class_options() const
    - void parse_file(std::string game_file)
    - void parse_sets(std::string game_file)
    - void parse_rest(std::string game_file)
    - void parse_set(std::istream &s)
    - void parse_race(std::istream &s)
    - void parse_mob(std::istream &s)
    - void parse_item(std::istream &s)
    - void parse_consumable(std::istream &s)
    - void parse_equippable(std::istream &s)
    - std::shared_ptr<Listener> load_effect(std::istream &s)
    - std::shared_ptr<Action> load_action(std::istream &s)
    - std::shared_ptr<Controller> load_controller(std::istream &s)
    - int parse_id(std::string name)

    - std::map<std::string, std::unique_ptr<FeatureSet>> set_table
    - std::map<std::string, int> type_table

    - std::map<int, Race> races

    - std::map<int, std::unique_ptr<Character>> mobs

    - std::vector<std::shared_ptr<Controller>> controllers
}

Entity::TempFeatureSet *-- Entity

EventInfo::Data *-- EventInfo

Stage <|- Menu
Stage <|- Dungeon

Action::Shape *-- Action
Action::Targets *-- Action

EventType *-- Action
EventType *-- Listener

Listener <|- DungeonRenderer

DungeonRenderer <|- ConsoleDungeonRenderer

EventTarget <|- Entity::Target
EventTarget <|- Character::Target
EventTarget <|- Item::Target
EventTarget <|- Consumable::Target
EventTarget <|- Equippable::Target

Entity <|- Item
Entity <|- Character
Item <|- Consumable
Item <|- Equippable

Entity::Target .. Entity
Character::Target .. Character
Item::Target .. Item
Consumable::Target .. Consumable
Equippable::Target .. Equippable

Stat "6" *-- Entity
Stat "11" *-- Character

Position *-- Entity

State *-- Game
State o-- Stage

Race *-- Loader
FeatureSet *-- Loader
Character *-- Loader
Controller o-- Loader

Listener <|-- Allergy
Listener <|-- LifeDrain
Listener <|-- ConsumedHealthMod
Listener <|-- VenerabilityModifier
Listener <|-- Regen
Listener <|-- Loot
Listener <|-- Venerability
Listener <|-- DepleteOnConsume
Listener <|-- RestoreOnConsume
Listener <|-- PointMod
Listener <|-- DropItems

StatModifier "0..*" *-- FeatureSet
Action "0..*" *-- FeatureSet
Listener "0..*" *-- FeatureSet

Type *-- Command
Direction *-- Command
EffectType *-- Consumable

StatType *-- StatModifier

StatModifier::Step *-- StatModifier

CellType *-- Dungeon

@enduml